tests/error/inout_errors/unused_after_call.err
Error: Linearity violation (at $FILE:16:7)
   | 
14 | @guppy(module)
15 | def test(q: qubit @owned) -> None:
16 |    foo(q)
   |        ^ Variable `q` with linear type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
